test/errorNonasciiWide.slq
def main() {
	ㅋ := ();
	ㅋㅋ := ㅋ + 1; /// error
}
